# typefaster-cli

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fly.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
client/: Dockerfile
client/typefaster/: __init__.py  __main__.py  cli.py
client/typefaster/assets/: __init__.py  quotes.json
client/typefaster/domain/: __init__.py  anti_cheat.py  calculators.py  drills.py  errors.py  ghost.py  keyboard.py  models.py  text_modifiers.py  typing_engine.py
client/typefaster/infra/: __init__.py  clock.py  config.py  db.py  migrations.py  paths.py  quote_loader.py  replay_store.py  repository.py  sqlite_repository.py
client/typefaster/net/: __init__.py  api.py  commands.py  token_store.py
client/typefaster/services/: __init__.py  coach_service.py  container.py  daily_service.py  ghost_service.py  profile_service.py  race_service.py  stats_service.py
client/typefaster/ui/: __init__.py  app.py  online_app.py  theme.py
client/typefaster/ui/screens/: _base.py  account.py  coach.py  daily.py  help.py  history.py  leaderboard.py  lobby_browser.py  main_menu.py  online_race.py  practice.py  profile.py  race.py  results.py  settings.py  stats.py
client/typefaster/ui/widgets/: __init__.py  bigtext.py  live_stats.py  progress_bars.py  typing_field.py
docs/: DEEPDIVE.md  INSTALL.md  MARKETING.md  RELEASING.md  SECURITY-REVIEW.md  api-spec.md  architecture.md  ddos-protection.md  deploy-fly.md  deploy-oracle.md  deployment.md  online-setup.md  redis-schema.md  roadmap.md  sqlite-schema.md  ui-design.md  websocket-protocol.md
infra/: README.md
infra/nginx/: nginx.conf
infra/redis/: redis.conf
packaging/homebrew/: typefaster.rb
scripts/: deploy-oracle.sh  seed_quotes.py
server/: Dockerfile  pyproject.toml
server/app/: __init__.py  abuse.py  config.py  deps.py  logging_config.py  main.py  quotes.py  redis_keys.py  repositories.py  security.py
server/app/routers/: auth.py  health.py  leaderboards.py  lobbies.py  oauth.py
server/app/ws/: __init__.py  manager.py
server/tests/: conftest.py  test_abuse.py  test_auth.py  test_health_leaderboards.py  test_lobbies.py  test_oauth.py  test_scoring_anticheat.py  test_ws_race.py
shared/: pyproject.toml
shared/typefaster_shared/: __init__.py  anti_cheat.py  dto.py  events.py  scoring.py
tests/: conftest.py
tests/integration/: test_container_and_cli.py  test_daily_streak.py  test_migrations.py  test_profile_stats.py  test_race_service.py  test_race_timing.py  test_sqlite_repository.py  test_ui_smoke.py
tests/unit/: test_anti_cheat.py  test_calculators.py  test_coach.py  test_config.py  test_drills.py  test_ghost.py  test_net.py  test_quote_loader.py  test_text_modifiers.py  test_typing_engine.py
