[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typefaster-cli"
version = "0.1.4"
description = "A terminal-first typing game inspired by MonkeyType and TypeRacer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anoshor Paul" }]
keywords = ["typing", "game", "cli", "terminal", "tui", "wpm", "monkeytype", "typeracer"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

# Phase 1 (offline) runtime dependencies only.
# Phase 2 will add: fastapi, uvicorn, websockets, httpx, redis, passlib[bcrypt], python-jose, pydantic.
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.60",
    "platformdirs>=4.2",
    "httpx>=0.27",        # online: REST calls to the server
    "websockets>=12.0",   # online: realtime multiplayer races
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.5",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]

[project.scripts]
# `typefaster` launches straight into the game / main menu.
typefaster = "typefaster.cli:app"

[project.urls]
Homepage = "https://github.com/Anoshor/typefaster-cli"
Repository = "https://github.com/Anoshor/typefaster-cli"

# ── Packaging ──────────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["client/typefaster"]
# The quote dataset lives inside the package (client/typefaster/assets) and is
# picked up automatically as package data — no force-include needed.
artifacts = ["client/typefaster/assets/quotes.json"]
# Make `pip install -e .` add the package's parent dir to sys.path reliably.
dev-mode-dirs = ["client"]

# ── Ruff ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["client", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",    # line length handled by black
    "RUF001",  # "ambiguous" unicode glyphs are intentional UI characters
    "RUF012",  # Textual BINDINGS/config are class-level by convention
    "UP042",   # int/str Enum mix is a deliberate design choice
]

[tool.ruff.lint.isort]
known-first-party = ["typefaster"]

# ── Black ──────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── MyPy ───────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
mypy_path = "client"
packages = ["typefaster"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# UI layer leans on dynamic Textual APIs; relax there only.
module = "typefaster.ui.*"
disallow_untyped_decorators = false

# ── Pytest ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["client"]
addopts = "-ra --strict-markers --cov=typefaster --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "unit: pure domain/service tests, no I/O",
    "integration: tests touching SQLite or the filesystem",
    "ui: Textual pilot/snapshot tests",
]

[tool.coverage.run]
source = ["typefaster"]
omit = ["*/ui/*"]  # UI covered by pilot smoke tests, not line coverage

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
