[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typefaster-shared"
version = "0.1.0"
description = "Shared schemas, WebSocket protocol, and scoring for TYPEFASTER."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[tool.hatch.build.targets.wheel]
packages = ["typefaster_shared"]
